# xolo

./: generate_test_video.py  pipe_coverage_viz.py  pipe_perception.rviz  record_sim_videos.py
install/: local_setup.sh  setup.sh
install/pipe_perception/lib/pipe_perception/: coverage_mapper_node  cylinder_unwrap_node  cylinder_visualizer_3d_node  video_ingest_node
install/pipe_perception/share/pipe_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pipe_perception/share/pipe_perception/launch/: pipe_perception.launch.py
install/pipe_simulation/lib/pipe_simulation/: auto_drive_node  odom_depth_node  synthetic_camera_node
install/pipe_simulation/share/pipe_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pipe_simulation/share/pipe_simulation/config/: bridge.yaml
install/pipe_simulation/share/pipe_simulation/launch/: gazebo.launch.py  sim.launch.py  video_inspect.launch.py
install/pipe_simulation/share/pipe_simulation/meshes/: pipe_hollow.stl
install/pipe_simulation/share/pipe_simulation/rviz/: sim.rviz
install/pipe_simulation/share/pipe_simulation/scripts/: generate_curved_pipe_mesh.py  generate_pipe_mesh.py
install/pipe_simulation/share/pipe_simulation/urdf/: pipe_bot.urdf.xacro
install/pipe_simulation/share/pipe_simulation/worlds/: pipe.world
log/: latest_build
src/pipe_perception/: README.md  setup.cfg  setup.py
src/pipe_perception/pipe_perception/nodes/: coverage_mapper_node.py  cylinder_visualizer_3d_node.py  video_ingest_node.py
src/pipe_simulation/: package.xml  setup.cfg  setup.py
src/pipe_simulation/config/: bridge.yaml
src/pipe_simulation/launch/: gazebo.launch.py  sim.launch.py
src/pipe_simulation/meshes/: pipe_hollow.stl
src/pipe_simulation/pipe_simulation/: auto_drive_node.py  odom_depth_node.py  synthetic_camera_node.py
src/pipe_simulation/rviz/: sim.rviz
src/pipe_simulation/urdf/: pipe_bot.urdf.xacro
src/pipe_simulation/worlds/: pipe.world
